// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cve closes old vulnerabilities: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve does not close new vulnerability: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve simple test: execSync.input 1`] = `
"0 cpe:/a:10web:form_maker:1.0.0
"
`;

exports[`cve simple test: vulnerability 1`] = `
Object {
  "actions": Any<Array>,
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-10866",
  "cvss": "9.8",
  "cwe": "CWE-89",
  "description": "",
  "id": Any<String>,
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "needsPopulation": false,
  "notes": "",
  "severity": "Critical",
  "state": "closed",
  "substate": "remediated",
  "title": "CVE-2019-10866",
  "updatedAt": Any<Date>,
}
`;

exports[`cve simple test: vulnerability 2`] = `
Object {
  "actions": Any<Array>,
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-11590",
  "cvss": "8.8",
  "cwe": "CWE-352",
  "description": "",
  "id": Any<String>,
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "needsPopulation": false,
  "notes": "",
  "severity": "High",
  "state": "closed",
  "substate": "remediated",
  "title": "CVE-2019-11590",
  "updatedAt": Any<Date>,
}
`;

exports[`cve simple test: vulnerability 3`] = `
Object {
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-10866",
  "cvss": "9.8",
  "cwe": "CWE-89",
  "description": "",
  "id": Any<String>,
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "notes": "",
  "severity": "Critical",
  "state": "open",
  "substate": "unconfirmed",
  "title": "CVE-2019-10866",
}
`;

exports[`cve simple test: vulnerability 4`] = `
Object {
  "cpe": "cpe:/a:10web:form_maker:1.0.0",
  "createdAt": Any<Date>,
  "cve": "CVE-2019-11590",
  "cvss": "8.8",
  "cwe": "CWE-352",
  "description": "",
  "id": Any<String>,
  "lastSeen": 2019-04-22T10:20:30.000Z,
  "notes": "",
  "severity": "High",
  "state": "open",
  "substate": "unconfirmed",
  "title": "CVE-2019-11590",
}
`;
